Fix: Icons are chopped from bottom on bookmark bar

In cl "reducing overdraw on bookmark bar", https://codereview.chromium.org/2899133004, 
the height of bookmark bar is reduced by 1 px for both detached mode and attached mode 
after removing the 1 px overlap between toolbar and bookmark bar. However, the tool 
bar and bookmark bar only overlaps when bookmark bar is in detached mode. The height 
of bookmark bar in attached mode should remain unchanged. 

TEST=BrowserView.BrowserViewLayout

Bug: 732062
Change-Id: Id363f9cf9d3ef5a606eb3f94723b28c5b1db09cb
Reviewed-on: https://chromium-review.googlesource.com/532055
Commit-Queue: Yi Xu <yiyix@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#479482}
Former-commit-id: 2f4c74729badb56a8a0d4c4cd18fea329f9fa552